@@ -1,1 +1,2 @@
 DIST auctex-1.53-pkg.tar.gz 925271 SHA256 c378129382a7ce8277e3d8850f4e0c2c9b0266b5dc26d339c3c685ede94ec43b SHA512 54ab6fee4ccca5e532dc871527690a79b4255156751e54a2b411e99aab1729277cb30519332cbe17e38ae7a78b66cfb2e38e1bff3caa307a73e7f0160d4b3afa WHIRLPOOL b3a7c05b83da974351bc68518cf0d37ca34e3c3ada8f67cd43642455e5b33f647243bb7bd50fd608635c702cc8740c466439a3f1dd611ba3c92d4ecf77b11137
+DIST auctex-1.54-pkg.tar.gz 925545 SHA256 44f0fa4b95f606e070172f579234f3f3807b16c6e8ed4b8b6728bed23abb282e SHA512 98afc72540f81b9b4d9cd468ab4711ee1d52efd3dc85ba1004153fae2628317a457e7281d9e58e425204bb9eac7b4c90810859a245dd88c3d102b9054915d41d WHIRLPOOL 1512e3782b5ead55c0d21a5bfe213e48c8d5b5fa91eacdf852ff0884fd33f415c98861f71a9dbe88f4b7eeb021a61a45cdd691d1fb85ce17b33955cc7e0b20fe
