@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/auctex/ChangeLog,v 1.28 2011/07/22 11:24:59 xarthisius Exp $
 
+*auctex-1.54 (25 Oct 2014)
+
+  25 Oct 2014; Mats Lidell <matsl@gentoo.org> +auctex-1.54.ebuild:
+  Pre release version bump.
+
 *auctex-1.53 (12 Jul 2014)
 
   12 Jul 2014; Mats Lidell <matsl@gentoo.org> +auctex-1.53.ebuild,
